# krita

cmake/modules/: FindPyQt5.cmake  FindPyQt5.py  FindSIP.py  SIPMacros.cmake  pyproject.toml.in  sip-generate.py
libs/image/: kis_cubic_curve.cpp
libs/pigment/: KoBgrColorSpaceTraits.h  KoCmykColorSpaceMaths.cpp  KoCmykColorSpaceMaths.h  KoCmykColorSpaceTraits.h  KoColorSpaceConstants.h  KoColorSpaceMaths.cpp  KoColorSpaceMaths.h  KoColorSpaceTraits.h  KoGrayColorSpaceTraits.h  KoLabColorSpaceMaths.cpp  KoLabColorSpaceMaths.h  KoLabColorSpaceTraits.h  KoRgbColorSpaceTraits.h
libs/pigment/resources/: KoSegmentGradient.cpp
libs/ui/tool/strokes/: KisMaskingBrushCompositeOpFactory.cpp
plugins/color/lcms2engine/: LcmsColorSpace.h
plugins/extensions/pykrita/sip/: CMakeLists.txt  pyproject.toml
